--- a/kadai1/index.html
+++ b/kadai1/index.html
@@ -29,7 +29,7 @@
       <div id="mainvisual">
         <img src="/imges/mainvisual.jpg" alt="テキストテキストテキスト" />
       </div>
-      <!-- セクション -->
+      <!-- セクション１（一つの区切り） -->
       <section id="about" class="wrapper">
         <h2 class="section-title">About</h2>
         <div class="content">
@@ -44,7 +44,6 @@
           </div>
         </div>
       </section>
-      <!-- セクション -->
       <section id="bicycle" class="wrapper">
         <h2 class="section-title">Bicycle</h2>
         <ul>
