--- a/kadai2/index.html
+++ b/kadai2/index.html
@@ -18,7 +18,7 @@
 
       <main>
         <div id="mainvisual">
-          <img src="mainvisual.jpg" alt="mainvisual" />
+          <img class="mainvisual-img" src="mainvisual.jpg" alt="mainvisual" />
         </div>
 
         <section id="index">
@@ -50,7 +50,7 @@
             <div class="content">
               <img class="img" src="detail.jpg" alt="detail" />
               <div class="text">
-                <p>タイトルタイトルタイトル</p>
+                <p class="text-detail">タイトルタイトルタイトル</p>
                 <dl>
                   <dt>著者</dt>
                   <dd>タイトルタイトルタイトル</dd>
