--- a/kadai1/index.html
+++ b/kadai1/index.html
@@ -8,6 +8,7 @@
     <title>Profile</title>
     <!-- ページの表示領域の指定。スマホで見た時ページが小さく反映されたりはみ出したりしないようにする -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -35,7 +36,7 @@
         <div class="content">
           <img src="/imges/about.jpg" alt="テキストテキストテキスト" />
           <div class="text">
-            <h3 class="content-title">KAKERU MIYAICHI</h3>
+            <h3 class="content-title2">KAKERU MIYAICHI</h3>
             <p>
               テキストテキストテキストテキストテキストテキストテキスト<br />
               テキストテキストテキストテキストテキストテキストテキスト<br />
